--- a/infrastructure/nginx/release.yaml
+++ b/infrastructure/nginx/release.yaml
@@ -22,6 +22,7 @@ spec:
   # https://github.com/bitnami/charts/blob/master/bitnami/nginx-ingress-controller/values.yaml
   values:
     service:
-      type: NodePort
+      # type: NodePort
+      type: LoadBalancer
     ingressClassResource:
       name: nginx
